--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="full_name">Full Name</string>
     <string name="email_address">Email Address</string>
     <string name="password">Password</string>
+    <string name="web_client_id">658134032197-4qce887i6de35nkm6f1epv9c7q3ruqsj.apps.googleusercontent.com</string>
 </resources>
